--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,15 +10,16 @@
       </ul>
     </div>
   <% end %>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
 
   <div class="field">
     <%= f.label :password %><br>
     <%= f.text_field :password %>
   </div>
-  <div class="field">
-    <%= f.label :password_digest %><br>
-    <%= f.text_field :password_digest %>
-  </div>
+   
   <div class="actions">
     <%= f.submit %>
   </div>
