--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Password</th>
-      <th>Password digest</th>
+      <th>Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +13,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.password %></td>
-        <td><%= user.password_digest %></td>
+        <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
