--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,10 @@
  <% @tweets.each do |tweet| %>
  <p><%= tweet.note %></p>
  <p><%= time_ago_in_words(tweet.created_at) %> ago</p>
+ <% if current_user && current_user.id == @user.id %>
+    <%= link_to 'delete', delete_tweet_path(tweet.id), method: :delete %>
+  <% end %>
+ 
  <% end %>
 
 
