added bootstrap styling

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing All Tweets</h1>
+<h1 class= "text-center">Listing All Tweets</h1>
+<div class= "row">
+</div>
 
-<table>
+
+
+ <table>
   <thead>
     <tr>
       <th>Tweets</th>
